examples/test/testpolicy15923.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15923
  namespace: namespace268
spec:
  podSelector:
    matchLabels:
      key22: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value42
          key44: value37
      podSelector:
        matchLabels:
          key32: value33
          key49: value23
          key1: value27
